# barebones

./: ChangeLog  Makefile.am  README  autotroll.mk  bootstrap.sh  configure.ac  moc.mk
doc/: Doxyfile.in  Makefile.am  Makefile.in
src/: Makefile.am  main.cc  run.sh.in
tests/: Makefile.am  check_null.cc
utils/git/: gitlog-to-changelog  post-commit
